Fix Nav Alignment #13

--- a/src/views/Projects/Projects.scss
+++ b/src/views/Projects/Projects.scss
@@ -21,7 +21,7 @@
       justify-content: center;
       font-weight: $bold;
       @media only screen and (min-width: $desktopScreen) {
-        justify-content: end;
+        justify-content: flex-end;
       }
 
       > * {
